Description and information added.

--- a/src/styles/_streaming-style.scss
+++ b/src/styles/_streaming-style.scss
@@ -16,6 +16,25 @@
     background-size: cover;
 
     color: var(--color-grey);
+
+    h1 {
+      color: var(--color-dark);
+    }
+
+    ol {
+      padding-left: 2rem;
+      
+      li {
+        list-style-type: decimal; 
+      }
+    }
+
+    &.how-to {
+      background: var(--color-grey);
+      color: var(--color-dark);
+  }
+
+  
   }
 }
 
