--- a/src/styles/_streaming-style.scss
+++ b/src/styles/_streaming-style.scss
@@ -22,9 +22,10 @@
     }
 
     ol {
-      padding-left: 2rem;
+      padding-left: 1.5rem;
       
       li {
+        padding-left: .5rem;
         list-style-type: decimal; 
       }
     }
