Part of HOW TO hidden before login. New icons.

--- a/src/styles/_streaming-style.scss
+++ b/src/styles/_streaming-style.scss
@@ -31,7 +31,7 @@
     }
 
     &.how-to {
-      background: var(--color-grey);
+      background: var(--color-white);
       color: var(--color-dark);
   }
 
