--- a/src/styles/_streaming-style.scss
+++ b/src/styles/_streaming-style.scss
@@ -144,15 +144,13 @@
       font-size: var(--h6);
       font-weight: bold;
 
-      transition: calc(var(--speed-slow) * 3);
-
       audio {
         width: 9rem;
       }
 
       &:hover {
         background-color: var(--color-white);
-        transition: calc(var(--speed-fast) / 2);
+        transition: 0s;
       }
 
       &.button-play {
@@ -166,16 +164,11 @@
       }
 
       &.button-do {
-        background-color: rgb(223, 223, 223);
-
-        &:hover {
-          opacity: 1;
-        }
+        background-color: var(--color-white);
       }
 
       &.fav-green {
         background-color: var(--color-green);
-        transition: 0s;
       }
 
       &.button-del:hover {
@@ -183,7 +176,7 @@
       }
 
       &.button-fav:hover {
-        background-color: var(--color-green);
+        background-color: var(--color-yellow);
       }
     }
   }
