--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -206,7 +206,7 @@ p {
 }
 
 
-/* CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES */
+/* CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES */
 
 .card {
   transition: 5s;
