--- a/src/styles/_streaming-style.scss
+++ b/src/styles/_streaming-style.scss
@@ -145,21 +145,24 @@
       font-weight: bold;
 
       audio {
-        visibility: hidden;
+        // visibility: hidden;
+        display: none;
         width: 9rem;
       }
 
       &.playing {
+        // outline: .5rem solid var(--color-yellow);
+        z-index: 1;
         background-color: var(--color-yellow);
         animation: playing 2s ease-out infinite;
         
         @keyframes playing {
           0% {
-            background-color: var(--color-grey);
+            background-color: var(--color-orange);
           }
         
           50% {
-            background-color: var(--color-white);
+            background-color: var(--color-yellow);
           }
         
           100% {
