--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1035,7 +1035,6 @@ button.dark-mode-button:active {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  background-color: var(--color-grey);
 }
 
 .streaming__results li button {
@@ -1066,26 +1065,29 @@ button.dark-mode-button:active {
 }
 
 .streaming__results li button.playing {
+  background: var(--color-dark);
+  -webkit-transform: translateX(1rem);
+          transform: translateX(1rem);
   z-index: 1;
-  -webkit-animation: playing 1.618s ease-out infinite;
-          animation: playing 1.618s ease-out infinite;
+  -webkit-animation: playing 1.618s ease-in infinite;
+          animation: playing 1.618s ease-in infinite;
 }
 
 @-webkit-keyframes playing {
-  0% {
-    background-color: var(--color-yellow);
+  from {
+    background: var(--color-white);
   }
-  100% {
-    background-color: var(--color-white);
+  to {
+    background: var(--color-grey);
   }
 }
 
 @keyframes playing {
-  0% {
-    background-color: var(--color-yellow);
+  from {
+    background: var(--color-white);
   }
-  100% {
-    background-color: var(--color-white);
+  to {
+    background: var(--color-grey);
   }
 }
 
@@ -1106,6 +1108,8 @@ button.dark-mode-button:active {
       align-content: center;
   color: var(--color-dark);
   text-align: left;
+  -webkit-transition: var(--speed-fast) ease-out;
+  transition: var(--speed-fast) ease-out;
 }
 
 .streaming__results li button.button-do {
