Fixed widith of left banner.

--- a/src/styles/_streaming-style.scss
+++ b/src/styles/_streaming-style.scss
@@ -1,5 +1,6 @@
 .streaming__banner {
-  min-width: 42vw;
+  // min-width: 30vw;
+  max-width: 38vw;
   
   display: flex;
   flex-direction: column;
