--- a/src/styles/_home-style.scss
+++ b/src/styles/_home-style.scss
@@ -3,10 +3,12 @@
   display: flex;
   gap: 1rem;
   height: 100%;
+  background-color: var(--color-dark);
 }
 
 .landing__second {
-  z-index: 1;
+  // z-index: 1;
+  background-color: var(--color-dark);
 }
 
 .landing__second div {
@@ -115,7 +117,7 @@
   flex-direction: column;
   gap: 1rem;
 
-  background: var(--bg-pos); 
+  background: var(--color-dark);
   width: 100%;
 
   .school-project {
@@ -181,14 +183,14 @@
 
 .michel {
   width: 100%; 
-  height: 36rem;
-  margin-bottom: -5em;
+  min-height: 89vh;
+  // margin-bottom: -5em;
 
   position: sticky;
   top: 8.25rem;
 
   transform: scaleX(-1);
-  // z-index: -1;
+  z-index: -1;
 
   background-image: url('../../public/images/michel.jpg'); 
   background-position: center left 0rem;
