--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -349,10 +349,11 @@ template {
   display: flex;
   gap: 1rem;
   height: 100%;
+  background-color: var(--color-dark);
 }
 
 .landing__second {
-  z-index: 1;
+  background-color: var(--color-dark);
 }
 
 .landing__second div {
@@ -470,7 +471,7 @@ template {
       -ms-flex-direction: column;
           flex-direction: column;
   gap: 1rem;
-  background: var(--bg-pos);
+  background: var(--color-dark);
   width: 100%;
 }
 
@@ -547,13 +548,13 @@ template {
 /* CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES  */
 .michel {
   width: 100%;
-  height: 36rem;
-  margin-bottom: -5em;
+  min-height: 89vh;
   position: -webkit-sticky;
   position: sticky;
   top: 8.25rem;
   -webkit-transform: scaleX(-1);
           transform: scaleX(-1);
+  z-index: -1;
   background-image: url("../../public/images/michel.jpg");
   background-position: center left 0rem;
   background-repeat: no-repeat;
@@ -1253,7 +1254,6 @@ svg {
 }
 
 body {
-  background-color: var(--color-dark);
   min-width: 280px;
   width: 100vw;
   position: relative;
@@ -1279,7 +1279,6 @@ body {
           flex-direction: column;
   -ms-flex-line-pack: stretch;
       align-content: stretch;
-  background-color: #1e1e1e;
   min-height: 100vh;
   width: 100vw;
 }
@@ -1479,16 +1478,17 @@ p:first-child {
     width: 100%;
   }
   .michel {
-    background-position: center right -12rem;
+    background-position: center right -34rem;
   }
 }
 
 @media screen and (min-width: 64rem) {
   footer {
+    display: none;
     height: auto;
     position: fixed;
     bottom: 2rem;
-    left: 2rem;
+    right: 2rem;
     background-color: var(--color-white);
     border: 0.5rem solid var(--color-dark);
     -webkit-box-shadow: 0 4px .5rem #1e1e1e;
