--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -48,7 +48,7 @@ $font-dragon: "UnifrakturMaguntia", "Times New Roman", serif;
 }
 
 body {
-  background-color: var(--color-dark);
+  // background-color: var(--color-dark);
   min-width: 280px;
   width: 100vw;
   position: relative;
@@ -69,7 +69,6 @@ body {
   display: flex;
   flex-direction: column;
   align-content: stretch;
-  background-color: #1e1e1e;
   min-height: 100vh;
   width: 100vw;
 }
@@ -247,17 +246,18 @@ p {
   }
 
   .michel {
-    background-position: center right -12rem;
+    background-position: center right -34rem;
   }
 }
 
 @media screen and (min-width: 64rem) {
 
   footer {
+    display: none;
     height: auto;
     position: fixed;
     bottom: 2rem;
-    left: 2rem;
+    right: 2rem;
 
     background-color: var(--color-white);
     border: 0.5rem solid var(--color-dark);
