--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -48,7 +48,7 @@ $font-dragon: "UnifrakturMaguntia", "Times New Roman", serif;
 }
 
 body {
-  // background-color: var(--color-dark);
+  background-color: var(--color-dark);
   min-width: 280px;
   width: 100vw;
   position: relative;
