--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1483,6 +1483,9 @@ p:first-child {
             flex-direction: column;
     width: 100%;
   }
+  .streaming__banner {
+    max-width: 100vw;
+  }
   .michel {
     background-position: center right -34rem;
   }
