--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -245,6 +245,9 @@ p {
     width: 100%;
   }
 
+  .streaming__banner {
+    max-width: 100vw;
+  }
   .michel {
     background-position: center right -34rem;
   }
