--- a/src/styles/_home-style.scss
+++ b/src/styles/_home-style.scss
@@ -4,6 +4,9 @@
   gap: 1rem;
   height: 100%;
   background-color: var(--color-dark);
+}
+
+.border__top {
   border-top: 1rem solid var(--color-dark);
   box-shadow: 0 -6rem 6rem var(--color-dark);
 }
