--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -56,7 +56,6 @@ body {
   display: grid;
   row-gap: 1rem;
   grid-template-rows: auto;
-  overflow-x: hidden; /* Prevents scroll bar during animations */
 
   color: var(--color-dark);
   font-size: var(--base-font-size);
@@ -71,6 +70,7 @@ body {
   align-content: stretch;
   min-height: 100vh;
   width: 100vw;
+  overflow-x: hidden;
 }
 
 /* HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER */
@@ -238,6 +238,11 @@ p {
 
 /* MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES */
 
+@media screen and (max-width: 375px) {
+  :root {
+    --base-font-size: 1rem;
+  }
+}
 @media screen and (max-width: 64rem) {
   .landing__top {
     display: flex;
