--- a/src/styles/_home-style.scss
+++ b/src/styles/_home-style.scss
@@ -6,27 +6,20 @@
   background-color: var(--color-dark);
 }
 
-.border__top {
-  border-top: 1rem solid var(--color-dark);
-  box-shadow: 0 -6rem 6rem var(--color-dark);
-}
-
 .landing__second {
-  // z-index: 1;
   background-color: var(--color-dark);
 
 }
 
 .landing__second div {
-  height: 90vh;
-  padding: 6rem 2rem 6rem;
+  padding: 2rem;
 
   display: flex;
-  align-items: center;
+  align-items: left;
   justify-content: center;
   flex-direction: column;
 
-  background-color: var(--color-grey);
+  background-color: var(--color-white);
 
   span {
     margin: .33rem;
@@ -133,6 +126,14 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    div {
+      display: flex;
+      flex-direction: row-reverse;
+      flex-wrap: wrap;
+      align-items: right;
+      // justify-content: space-between;
+      flex-shrink: 1;
+    }
   }
 
   h1 { 
@@ -190,18 +191,27 @@
 /* CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES  */
 
 .michel {
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  align-items: flex-start;
+  
+  h2 {
+    color: var(--color-white);
+    text-align: left;
+  
+    max-width: 30rem;
+  }
   width: 100%; 
   min-height: 89vh;
-  // margin-bottom: -5em;
 
   position: sticky;
   top: 8.25rem;
 
-  transform: scaleX(-1);
   z-index: -1;
 
-  background-image: url('../../public/images/michel.jpg'); 
-  background-position: center left -10rem;
+  background-image: url('../../public/images/michel.jpg');
   background-repeat: no-repeat; 
   background-size: cover; 
 }
