--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -352,25 +352,18 @@ template {
   background-color: var(--color-dark);
 }
 
-.border__top {
-  border-top: 1rem solid var(--color-dark);
-  -webkit-box-shadow: 0 -6rem 6rem var(--color-dark);
-          box-shadow: 0 -6rem 6rem var(--color-dark);
-}
-
 .landing__second {
   background-color: var(--color-dark);
 }
 
 .landing__second div {
-  height: 90vh;
-  padding: 6rem 2rem 6rem;
+  padding: 2rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: left;
+      -ms-flex-align: left;
+          align-items: left;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -378,7 +371,7 @@ template {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  background-color: var(--color-grey);
+  background-color: var(--color-white);
 }
 
 .landing__second div span {
@@ -497,6 +490,23 @@ template {
           justify-content: space-between;
 }
 
+.landing-list .school-project div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: right;
+      -ms-flex-align: right;
+          align-items: right;
+  -ms-flex-negative: 1;
+      flex-shrink: 1;
+}
+
 .landing-list h1 {
   color: #e4e4e4;
   padding: .25rem 1.5rem 0rem 1.5rem;
@@ -555,18 +565,35 @@ template {
 
 /* CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES  */
 .michel {
+  padding: 2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: left;
+      -ms-flex-pack: left;
+          justify-content: left;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
   width: 100%;
   min-height: 89vh;
   position: -webkit-sticky;
   position: sticky;
   top: 8.25rem;
-  -webkit-transform: scaleX(-1);
-          transform: scaleX(-1);
   z-index: -1;
   background-image: url("../../public/images/michel.jpg");
-  background-position: center left -10rem;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.michel h2 {
+  color: var(--color-white);
+  text-align: left;
+  max-width: 30rem;
 }
 
 /* BANNER - BANNER - BANNER - BANNER - BANNER - BANNER - BANNER - BANNER - BANNER */
@@ -1266,6 +1293,7 @@ body {
   min-width: 280px;
   width: 100vw;
   position: relative;
+  overflow-x: hidden;
   display: -ms-grid;
   display: grid;
   row-gap: 1rem;
@@ -1289,6 +1317,7 @@ body {
   min-height: 100vh;
   width: 100vw;
   overflow-x: hidden;
+  scrollbar-gutter: stable;
 }
 
 /* HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER */
@@ -1493,9 +1522,6 @@ p:first-child {
   }
   .streaming__banner {
     max-width: 100vw;
-  }
-  .michel {
-    background-position: center right -20rem;
   }
 }
 
