--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -52,6 +52,7 @@ body {
   min-width: 280px;
   width: 100vw;
   position: relative;
+  overflow-x: hidden;
 
   display: grid;
   row-gap: 1rem;
@@ -71,6 +72,7 @@ body {
   min-height: 100vh;
   width: 100vw;
   overflow-x: hidden;
+  scrollbar-gutter: stable;
 }
 
 /* HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER */
@@ -252,9 +254,6 @@ p {
 
   .streaming__banner {
     max-width: 100vw;
-  }
-  .michel {
-    background-position: center right -20rem;
   }
 }
 
