--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -138,7 +138,7 @@ main {
 footer {
   display: flex;
   align-items: center;
-  justify-content: center;
+  // justify-content: left;
   z-index: 1;
 
   background-color: var(--color-dark); 
@@ -254,32 +254,5 @@ p {
 
   .streaming__banner {
     max-width: 100vw;
-  }
-}
-
-@media screen and (min-width: 64rem) {
-
-  footer {
-    display: none;
-    height: auto;
-    position: fixed;
-    bottom: 2rem;
-    right: 2rem;
-
-    background-color: var(--color-white);
-    border: 0.5rem solid var(--color-dark);
-    box-shadow: 0 4px .5rem #1e1e1e;
-
-    &:active,
-    &:hover {        
-      border-radius: 1rem;
-      transition: border-radius var(--speed-fast) ease-out;
-    }
-
-    a,
-    a:visited {
-      color: var(--color-dark);
-      padding: 1rem;
-    }
   }
 }
