--- a/src/styles/_home-style.scss
+++ b/src/styles/_home-style.scss
@@ -1,13 +1,26 @@
 .landing__top {
   width: 100vw;
+  height: 100%;
   display: flex;
   gap: 1rem;
-  height: 100%;
+  
   background-color: var(--color-dark);
+  position: sticky;
+  top: 7rem;
+  
+  z-index: 0;
+  }
+  
+  .home__top {
+    border-top: 1rem solid var(--color-dark);
 }
 
 .landing__second {
+  border-top: 1rem solid var(--color-dark);
   background-color: var(--color-dark);
+  position: sticky;
+  top: 7rem;
+  z-index: 2;
 
 }
 
@@ -21,6 +34,7 @@
 
   background-color: var(--color-white);
 
+  
   span {
     margin: .33rem;
     border: .5rem solid var(--color-dark);
@@ -56,7 +70,9 @@
 }
 
 .goals {
+  border-top: 1rem solid var(--color-dark);
   background-color: var(--color-dark);
+  z-index: 3;
 
   ul {
     display: grid;
@@ -197,21 +213,19 @@
   justify-content: left;
   align-items: flex-start;
   
+  width: 100%; 
+  min-height: 89vh;
+
+  position: sticky;
+  top: 8.5rem;
+  z-index: -1;
+
+  background-image: url('../../public/images/michel.jpg');
+  background-size: cover; 
   h2 {
     color: var(--color-white);
     text-align: left;
   
     max-width: 30rem;
   }
-  width: 100%; 
-  min-height: 89vh;
-
-  position: sticky;
-  top: 8.25rem;
-
-  z-index: -1;
-
-  background-image: url('../../public/images/michel.jpg');
-  background-repeat: no-repeat; 
-  background-size: cover; 
 }
