--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -344,16 +344,29 @@ template {
 
 .landing__top {
   width: 100vw;
+  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   gap: 1rem;
-  height: 100%;
   background-color: var(--color-dark);
+  position: -webkit-sticky;
+  position: sticky;
+  top: 7rem;
+  z-index: 0;
+}
+
+.home__top {
+  border-top: 1rem solid var(--color-dark);
 }
 
 .landing__second {
+  border-top: 1rem solid var(--color-dark);
   background-color: var(--color-dark);
+  position: -webkit-sticky;
+  position: sticky;
+  top: 7rem;
+  z-index: 2;
 }
 
 .landing__second div {
@@ -409,7 +422,9 @@ template {
 }
 
 .goals {
+  border-top: 1rem solid var(--color-dark);
   background-color: var(--color-dark);
+  z-index: 3;
 }
 
 .goals ul {
@@ -583,10 +598,9 @@ template {
   min-height: 89vh;
   position: -webkit-sticky;
   position: sticky;
-  top: 8.25rem;
+  top: 8.5rem;
   z-index: -1;
   background-image: url("../../public/images/michel.jpg");
-  background-repeat: no-repeat;
   background-size: cover;
 }
 
@@ -765,9 +779,6 @@ aside {
   }
   main {
     grid-column: span 2;
-    display: -ms-grid;
-    display: grid;
-    grid-gap: 1rem;
     -ms-grid-columns: 38.2% 1fr;
         grid-template-columns: 38.2% 1fr;
     /* 38.2% = Golden Ratio */
@@ -1294,11 +1305,6 @@ body {
   width: 100vw;
   position: relative;
   overflow-x: hidden;
-  display: -ms-grid;
-  display: grid;
-  row-gap: 1rem;
-  -ms-grid-rows: auto;
-      grid-template-rows: auto;
   color: var(--color-dark);
   font-size: var(--base-font-size);
   line-height: 1.5;
@@ -1316,8 +1322,8 @@ body {
       align-content: stretch;
   min-height: 100vh;
   width: 100vw;
-  overflow-x: hidden;
   scrollbar-gutter: stable;
+  top: 0;
 }
 
 /* HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER */
@@ -1365,6 +1371,9 @@ header ul li a.streaming-link {
 
 /* MAIN MAIN MAIN MAIN MAIN MAIN MAIN MAIN MAIN MAIN MAIN MAIN MAIN MAIN MAIN */
 main {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1372,7 +1381,6 @@ main {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  gap: 1rem;
 }
 
 /* FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER */
@@ -1383,7 +1391,8 @@ footer {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  z-index: 1;
+  position: relative;
+  top: 7rem;
   background-color: var(--color-dark);
   font-size: var(--h5);
   -webkit-transition: border-radius var(--speed-slow);
@@ -1509,12 +1518,6 @@ p:first-child {
 }
 
 /* MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES */
-@media screen and (max-width: 375px) {
-  :root {
-    --base-font-size: 1rem;
-  }
-}
-
 @media screen and (max-width: 64rem) {
   .landing__top {
     display: -webkit-box;
@@ -1525,9 +1528,22 @@ p:first-child {
         -ms-flex-direction: column;
             flex-direction: column;
     width: 100%;
+    top: -21rem;
   }
   .streaming__banner {
     max-width: 100vw;
+  }
+}
+
+@media all and (max-width: 376px) {
+  :root {
+    --base-font-size: 1rem;
+  }
+  .landing__top {
+    top: -37rem;
+  }
+  .landing__second {
+    top: 6rem;
   }
 }
 /*# sourceMappingURL=style.css.map */
