--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -54,10 +54,6 @@ body {
   position: relative;
   overflow-x: hidden;
 
-  display: grid;
-  row-gap: 1rem;
-  grid-template-rows: auto;
-
   color: var(--color-dark);
   font-size: var(--base-font-size);
   line-height: 1.5;
@@ -71,16 +67,14 @@ body {
   align-content: stretch;
   min-height: 100vh;
   width: 100vw;
-  overflow-x: hidden;
   scrollbar-gutter: stable;
+  top: 0;
 }
 
 /* HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER HEADER */
 
 header {
-  // margin-bottom: 1rem;
   border-bottom: 1rem solid var(--color-dark);
-  // outline: 1rem solid var(--color-dark);
 
   display: flex;
   align-items: center;
@@ -128,9 +122,11 @@ header {
 // }
 
 main {
+  position: sticky;
+  top: 0;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  // gap: 1rem;
 }
 
 /* FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER FOOTER */
@@ -138,8 +134,8 @@ main {
 footer {
   display: flex;
   align-items: center;
-  // justify-content: left;
-  z-index: 1;
+  position: relative;
+  top: 7rem;
 
   background-color: var(--color-dark); 
   font-size: var(--h5);
@@ -248,19 +244,29 @@ p {
 
 /* MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES MEDIA QUERIES */
 
-@media screen and (max-width: 375px) {
-  :root {
-    --base-font-size: 1rem;
-  }
-}
+
 @media screen and (max-width: 64rem) {
   .landing__top {
     display: flex;
     flex-direction: column;
     width: 100%;
+    top: -21rem;
   }
 
   .streaming__banner {
     max-width: 100vw;
+  }
+}
+@media all and (max-width: 376px) {
+  :root {
+    --base-font-size: 1rem;
+  }
+
+  .landing__top {
+    top: -37rem;
+  }
+
+  .landing__second {
+    top: 6rem;
   }
 }
