--- a/src/styles/_blog-style.scss
+++ b/src/styles/_blog-style.scss
@@ -76,9 +76,11 @@
 /* THUMBNAILS - THUMBNAILS - THUMBNAILS - THUMBNAILS - THUMBNAILS - THUMBNAILS */
 
 .blog__cards {
+  background-color: var(--color-dark);
   border-top: 1rem solid var(--color-dark);
   display: flex;
   gap: 1rem;
+  z-index: 1;
 
   aside {
     width: 100%;
@@ -96,6 +98,25 @@ aside {
 
 /* CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES */
 
+.michel2 {
+  border-top: 1rem solid var(--color-dark);
+
+  min-height: 89vh;
+
+  position: sticky;
+  top: 8.5rem;
+  z-index: 2;
+
+  background-image: url('../../public/images/michel2.jpg');
+  background-size: cover;
+
+  h2 {
+    color: var(--color-white);
+    text-align: left;
+
+    max-width: 30rem;
+  }
+}
 /* MEDIA QUERIES - MEDIA QUERIES - MEDIA QUERIES - MEDIA QUERIES - MEDIA QUERIES */
 
 @media screen and (min-width: 64rem) {
