--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -701,11 +701,13 @@ template {
 
 /* THUMBNAILS - THUMBNAILS - THUMBNAILS - THUMBNAILS - THUMBNAILS - THUMBNAILS */
 .blog__cards {
+  background-color: var(--color-dark);
   border-top: 1rem solid var(--color-dark);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   gap: 1rem;
+  z-index: 1;
 }
 
 .blog__cards aside {
@@ -719,6 +721,23 @@ aside {
 }
 
 /* CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES */
+.michel2 {
+  border-top: 1rem solid var(--color-dark);
+  min-height: 89vh;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 8.5rem;
+  z-index: 2;
+  background-image: url("../../public/images/michel2.jpg");
+  background-size: cover;
+}
+
+.michel2 h2 {
+  color: var(--color-white);
+  text-align: left;
+  max-width: 30rem;
+}
+
 /* MEDIA QUERIES - MEDIA QUERIES - MEDIA QUERIES - MEDIA QUERIES - MEDIA QUERIES */
 @media screen and (min-width: 64rem) {
   header {
