--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -640,7 +640,7 @@ template {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  background: var(--color-yellow) url("../../public/images/svg/blob-scene-haikei.svg") no-repeat top left -10px;
+  background: var(--color-yellow) url("../../public/images/svg/blob-scene-haikei.svg") no-repeat;
   background-size: cover;
   -webkit-transition: -webkit-filter 5s ease-in-out;
   transition: -webkit-filter 5s ease-in-out;
