--- a/src/styles/_home-style.scss
+++ b/src/styles/_home-style.scss
@@ -1,3 +1,26 @@
+nav.side {
+  height: 92vh;
+  width: 30rem;
+  border: 1rem solid var(--color-dark);
+  padding: 1rem;
+
+  position: absolute;
+  top: 7.5rem;
+  right: 0;
+
+  background-color: var(--color-white);
+  color: var(--color-dark);
+  font-size: var(--h6);
+  // font-weight: bold;
+  z-index: 3;
+
+  transition: var(--speed-slow) ease-in-out;
+  transform: translateX(38rem);
+
+  li {
+    padding: 1rem;
+  }
+}
 .landing__top {
   width: 100vw;
   height: 100%;
