--- a/src/styles/_home-style.scss
+++ b/src/styles/_home-style.scss
@@ -252,3 +252,44 @@ nav.side {
     max-width: 30rem;
   }
 }
+.michel2 {
+  border-top: 1rem solid var(--color-dark);
+  padding: 2rem;
+
+  min-height: 89vh;
+
+  position: sticky;
+  top: 7.5rem;
+  z-index: 2;
+
+  background-image: url('../../public/images/michel2.jpg');
+  background-size: cover;
+
+  h2 {
+    color: var(--color-white);
+    text-align: left;
+
+    max-width: 30rem;
+  }
+}
+
+.michel3 {
+  border-top: 1rem solid var(--color-dark);
+  padding: 2rem;
+
+  min-height: 69vh;
+
+  position: sticky;
+  top: 7.5rem;
+  z-index: 2;
+
+  background-image: url('../../public/images/michel3.jpg');
+  background-size: cover;
+
+  h2 {
+    color: var(--color-white);
+    text-align: left;
+
+    max-width: 30rem;
+  }
+}
