--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -632,6 +632,42 @@ nav.side li {
   max-width: 30rem;
 }
 
+.michel2 {
+  border-top: 1rem solid var(--color-dark);
+  padding: 2rem;
+  min-height: 89vh;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 7.5rem;
+  z-index: 2;
+  background-image: url("../../public/images/michel2.jpg");
+  background-size: cover;
+}
+
+.michel2 h2 {
+  color: var(--color-white);
+  text-align: left;
+  max-width: 30rem;
+}
+
+.michel3 {
+  border-top: 1rem solid var(--color-dark);
+  padding: 2rem;
+  min-height: 69vh;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 7.5rem;
+  z-index: 2;
+  background-image: url("../../public/images/michel3.jpg");
+  background-size: cover;
+}
+
+.michel3 h2 {
+  color: var(--color-white);
+  text-align: left;
+  max-width: 30rem;
+}
+
 /* BANNER - BANNER - BANNER - BANNER - BANNER - BANNER - BANNER - BANNER - BANNER */
 .blog__top {
   width: 100vw;
@@ -749,23 +785,6 @@ aside {
 }
 
 /* CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES CLASSES */
-.michel2 {
-  border-top: 1rem solid var(--color-dark);
-  min-height: 89vh;
-  position: -webkit-sticky;
-  position: sticky;
-  top: 8.5rem;
-  z-index: 2;
-  background-image: url("../../public/images/michel3.jpg");
-  background-size: cover;
-}
-
-.michel2 h2 {
-  color: var(--color-white);
-  text-align: left;
-  max-width: 30rem;
-}
-
 /* MEDIA QUERIES - MEDIA QUERIES - MEDIA QUERIES - MEDIA QUERIES - MEDIA QUERIES */
 @media screen and (min-width: 64rem) {
   header {
