Added new photo to blog page.

--- a/src/styles/_home-style.scss
+++ b/src/styles/_home-style.scss
@@ -252,7 +252,8 @@ nav.side {
     max-width: 30rem;
   }
 }
-.michel2 {
+.michel2,
+.michel3 {
   border-top: 1rem solid var(--color-dark);
   padding: 2rem;
 
@@ -275,7 +276,6 @@ nav.side {
 
 .michel3 {
   border-top: 1rem solid var(--color-dark);
-  padding: 2rem;
 
   min-height: 69vh;
 
@@ -285,11 +285,18 @@ nav.side {
 
   background-image: url('../../public/images/michel3.jpg');
   background-size: cover;
-
-  h2 {
-    color: var(--color-white);
-    text-align: left;
-
-    max-width: 30rem;
+  background-position: center top;
   }
+  
+.michel4 {
+  border-top: 1rem solid var(--color-dark);
+  min-height: 89vh;
+
+  position: sticky;
+  top: 6rem;
+  z-index: 2;
+
+  background-image: url('../../public/images/michel4.jpg');
+  background-size: cover;
+  background-position: center center;
 }
